# Inhexit

./: CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY.md  biomes.py  build.sh  commands  main.py  organism.py
.github/workflows/: build.yml
rust_engine/: Cargo.toml
rust_engine/src/: main.rs
src/: BlockInteraction.h  Camera.cpp  Chunk.cpp  Chunk.h  Game.cpp  Game.h  InventorySystem.cpp  InventorySystem.h  Menu.cpp  MultiplayerClient.h  Player.cpp  Player.h  TimeSystem.cpp  TimeSystem.h  Utils.cpp  Utils.h  WeatherSystem.cpp  WeatherSystem.h  sfml2_fix.py
