[package]
name = "tesselbox_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
 anyhow = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3